# askwol

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  report.md
examples/: broken.ttl  sample.ttl
src/askwol/: __init__.py  __main__.py  cache.py  cli.py  definition_docs.py  imports_check.py  iri_scheme.py  iri_strategy.py  lang_tags.py  mermaid_diagram.py  metadata_validator.py  models.py  parser.py  reasoner_checks.py  report.py  report_html.py  resolver.py  templates.py  term_validator.py  usage.py  web.py
src/askwol/shapes/: __init__.py  definition_documentation.ttl  ontology_metadata.ttl
tests/: test_api_integration.py  test_broken_fixture.py  test_definition_docs.py  test_imports_check.py  test_iri_scheme.py  test_iri_strategy.py  test_lang_tags.py  test_metadata_validator.py  test_parser.py  test_reasoner_checks.py  test_report_html.py  test_resolver.py  test_term_validator.py  test_unused_prefixes.py
tests/fixtures/: sample.ttl
